<resources>
    <string name="app_name">TurnedTables</string>
    <string name="search_exp">TurnedTables PROFESORUNU ARA</string>
    <string name="uni_name">Üniversite Adı:</string>
    <string name="field_name">Bölüm Adı:</string>
    <string name="prof_name">Profesör Adı:</string>
    <string name="uni_name1">Üniversite adı</string>
    <string name="field_name1">Bölüm adı</string>
    <string name="prof_name1">Profesör adı</string>
    <string name="settings">Ayarlar</string>
    <string name="signUp">Kayıt ol</string>
    <string name="logIn">Hesabın mı var? Giriş Yap</string>
    <string name="darkMode">Koyu mod</string>
    <string name="language">Uygulama dili</string>
    <string name="signOut">Çıkış Yap</string>
    <string name="lang_exp">Uygulama dilini değiştirmek istediğinize emin misiniz ?</string>
    <string name="yes">evet</string>
    <string name="no">hayır</string>
    <string name="tr">TR</string>
    <string name="en">EN</string>
    <string name="rateNumber">Toplam Oylama</string>
    <string name="likeNumber">Beğendiği</string>
    <string name="likedNumber">Aldığı Beğeniler</string>
    <string name="dislikedNumber">Aldığı Beğenmedimler</string>
    <string name="preview_exp">Profil önizlemesi</string>
    <string name="editProfile">Profili Düzenle</string>
    <string name="email">Email Adresi:</string>
    <string name="hidden_exp">Bu bilgi gizlidir. Sadece sen görebilirsin</string>
    <string name="save">Kaydet</string>
    <string name="email_exp">Email adresi</string>
    <string name="changePassword">Şifreyi Değiştir</string>
    <string name="myRates">Benim Oylamalarım</string>
    <string name="myLikes">Beğendiğim Oylamalar</string>
    <string name="myDislikes">Beğenmediğim Oylamalar</string>
    <string name="username">Kullanıcı Adı:</string>
    <string name="username_exp">Kullanıcı adı</string>
    <string name="password">Şifre</string>
    <string name="password_again">Şifre (Tekrardan)</string>
    <string name="choosePhoto">Fotoğraf seç</string>
    <string name="error">Hata</string>
    <string name="email_exist">Bu email kullanımda!</string>
    <string name="username_exist">Bu kullanıcı adi kullanımda!</string>
    <string name="password_not_match">Şifreler eşleşmiyor!</string>
    <string name="email_invalid">Böyle bir email bulunamadı!</string>
    <string name="ok">Tamam</string>
    <string name="password_short">Şifre 6 karakterden kısa olamaz!</string>
    <string name="username_short">Kullanıcı adı 2 karakterden kısa olamaz!</string>
    <string name="empty_form">Lütfen bütün alanları doldurunuz!</string>
    <string name="errorOccurred">Bir hata oluştu. Lütfen tekrar deneyiniz!</string>
    <string name="loading">Yükleniyor…</string>
    <string name="logIn_title">Giriş Yap</string>
    <string name="usernameOremail">Kullanıcı adı veya email adresi</string>
    <string name="forgotPassword">Şifreni mi unuttun ?</string>
    <string name="username_at_error">Kullanıcı adınızda \'@\' bulunduramazsınız</string>
    <string name="noUser">Böyle bir kullanıcı bulunmamaktadır!</string>
    <string name="password_wrong">Hatalı şifre girdiniz!</string>
    <string name="username_invalid">Boyle bir kullanıcı adı bulunamadı!</string>
    <string name="signOut_exp">Çıkış Yapmak istediğinize emin misiniz ?</string>
    <string name="password_reset">Şifreyi sıfırla</string>
    <string name="reset">Sıfırla</string>
    <string name="reset_sent">Sıfırlama emaili email adresinize gönderildi!</string>
    <string name="ChangeEmailExp">Email adresini değiştirmen için şifreni girmen gerekiyor! \n Lütfen şifrenizi giriniz</string>
    <string name="EmailChanged">E-mail değişti!</string>
    <string name="EmailChangedVerificationSent">Doğrulama emaili gönderdik \n
Lütfen emailinizi doğrulayın!</string>
    <string name="CouldntChangeEmail">Email adresini değiştiremedik!</string>
    <string name="SentVerification">Doğrulama emaili yollandı!</string>
    <string name="Cancel">İptal</string>
    <string name="Saved">Kaydedildi</string>
    <string name="successful">Başarılı</string>
    <string name="password_changed">Şifre değişti!</string>
    <string name="password_changed_title">Şifreyi değiştir</string>
    <string name="password_current">Su anki şifre</string>
    <string name="password_new">Yeni şifre</string>
    <string name="password_new_again">Yeni şifre tekrardan</string>
    <string name="city_name">Şehir Adı:</string>
    <string name="city_name_exp">Şehir adı</string>
    <string name="set_filters">Filtre ekle</string>
    <string name="search">Arama Sonucu</string>
    <string name="search_fill_one">Lütfen en az bir tane arama kriteri giriniz</string>
    <string name="sort_title">Sıralama</string>
    <string name="sort_high">Yüksek degerlendirme notu </string>
    <string name="sort_low">Düşük degerlendirme notu</string>
    <string name="filter_uni">Üniversiteler</string>
    <string name="filter_city">Şehirler</string>
    <string name="filter_field">Bölümler</string>
    <string name="rating_helpfulness">Yardımsever</string>
    <string name="rating_attendance">Derse Katılım</string>
    <string name="rating_difficulty">Zorluk Seviyesi</string>
    <string name="rating_lecture">Ders Anlatım</string>
    <string name="rating_textbook">Kitap</string>
    <string name="mandatory">Zorunlu</string>
    <string name="not_mandatory">Zorunlu değil</string>
    <string name="book_yes">Var</string>
    <string name="book_no">Yok</string>
    <string name="rating_title">Oylama Detayları</string>
    <string name="rating_comments_title">Yorum İçeren Oylamalar</string>
    <string name="prof_profile">Profesör Profili</string>
    <string name="total_ratings">oylama</string>
    <string name="rate_title">Profesörü Oyla</string>
    <string name="rate_title2">Puanla</string>
    <string name="rate_title3">Yorum ekle</string>
    <string name="done">Tamamla</string>
    <string name="rate_fill_all">Lütfen Yardımsever, Zorluk Seviyesi ve Ders Anlatım kriterlerini puanlayınız.</string>
    <string name="rate_no_comment">Bu oylamayı yorum yapmadan tamamlamak istediğinize emin misiniz ?</string>
    <string name="scale">(5 en iyi, 1 en kötü)</string>
    <string name="scale_opposite">(1 en iyi, 5 en kötü)</string>
    <string name="now">Şimdi</string>
    <string name="justNow">Biraz önce</string>
    <string name="oneM">1d</string>
    <string name="m">d</string>
    <string name="oneH">1s</string>
    <string name="h">s</string>
    <string name="yesterday">Dün</string>
    <string name="d">g</string>
    <string name="average">Ortalama</string>
    <string name="rate_login_exp">Profesör oylamak icin giriş yapmanız gerekmektedir.</string>
    <string name="information">Bilgilendirme</string>
    <string name="report">Rapor Gönder</string>
    <string name="report_exp">Bu yorumu içersinde kullanılan dilden dolayı raporlamak istediğinize emin misiniz ?</string>
    <string name="report_done">Rapor gönderildi</string>
    <string name="delete">Sil</string>
    <string name="delete_exp">Bu oylamayı silmek istediğinize emin misiniz ?</string>
    <string name="delete_done">Silindi</string>
    <string name="likeDislike_exp">Bu yoruma like/dislike verebilmeniz için giriş yapmanız gerekmektedir.</string>
    <string name="reportLogin_exp">Bu yorumu şikayet edebilmek icin giriş yapmanız gerekmektedir.</string>
    <string name="disliked">Beğenmediği</string>
    <string name="user_profile">Kullanıcı Profili</string>
    <string name="notifications">Bildirimler</string>
    <string name="not_like">adli profesöre yaptığın oylamaya 1 beğeni geldi!</string>
    <string name="not_dislike">adli profesöre yaptığın oylamaya 1 beğenmedim geldi.</string>
    <string name="not_like_total">Toplam Beğeniler:</string>
    <string name="not_dislike_total">Toplam Beğenmedimler:</string>
    <string name="rating">Oylama</string>
    <string name="slang_1"> sikeyim </string>
    <string name="slang_2"> sikiyim </string>
    <string name="slang_3"> amına </string>
    <string name="slang_4">amına koyayım</string>
    <string name="slang_5"> amk </string>
    <string name="slang_6"> aq </string>
    <string name="slang_7">amınakoyayım</string>
    <string name="slang_8">senisikeyim</string>
    <string name="slang_9">senisikiyim</string>
    <string name="slang_10" translatable="false">amınakoduğum</string>
    <string name="slang_11" translatable="false">amınakodumun</string>
    <string name="slang_12" translatable="false"> amına koduğum</string>
    <string name="slang_13" translatable="false"> amına kodumun</string>
    <string name="slang_14" translatable="false"> siktiğimin </string>
    <string name="slang_15"> orospu </string>
    <string name="slang_16"> şerefsiz </string>
    <string name="slang_17"> ibne </string>
    <string name="slang_18"> ibine </string>
    <string name="slang_19" translatable="false"> nah </string>
    <string name="slang_20"> piç </string>
    <string name="slang_exp">Küfürlü yorum yapılması yasaktır! Lütfen yorumunuzu değiştirin.</string>
    <string name="offer_prof_name">Profesör ismi öner</string>
    <string name="contact_us">Bize Ulaşın</string>
    <string name="title">Başlık</string>
    <string name="text">İçerik</string>
    <string name="send">Gönder</string>
    <string name="removeAds">Reklamları Kaldır</string>
    <string name="purchase_canceled">Ödeme işlemi iptal edildi.</string>
    <string name="purchase_completed">Ödeme işlemi başarıyla tamamlandı</string>
    <string name="purchase_error">Ödeme işlemi tamamlandı fakat reklamları kaldırma aşamasında bir hata oluştu!
        Lütfen bu verdigimiz kodu kullanıcı adınız ile birlikte bize ulaşın kısmından bize bildirin!</string>
    <string name="banned_exp">Uygulama adminlerimiz tarafından banlandınız!</string>
    <string name="banned_sign_up">Bu email uygulamamızda banlıdır!</string>
    <string name="delete_account">Hesabı sil</string>
    <string name="deleted_account">Hesabınız silindi</string>
    <string name="deleted_exp">Hesabınızı silmek istediğinizden emin misiniz ?</string>
    <string name="not_deleted">adlı profesöre yaptığın oylama adminlerimiz tarafından silindi.</string>
    <string name="not_google_info">*Google servislerini desteklemeyen telefonlarda şu an için üyelik işlemlerini gerçekleştiremiyoruz.</string>
    <string name="im_exp_1">Spinner Photo</string>
    <string name="im_exp_2">Like</string>
    <string name="im_exp_3">Dislike</string>
    <string name="im_exp_4">Delete</string>
    <string name="im_exp_5">Rate</string>
    <string name="im_exp_6">Drop</string>
    <string name="im_exp_7">Clear Filter</string>
    <string name="im_exp_8">Report</string>
    <string name="title_p">Ünvan</string>
    <string name="p_title_1">Yrd. Doç.</string>
    <string name="p_title_2">Dr. Öğr. Üyesi</string>
    <string name="p_title_3">Doç.</string>
    <string name="p_title_4">Doç. Dr.</string>
    <string name="p_title_5">Prof.</string>
    <string name="p_title_6">Prof. Dr.</string>
    <string name="p_title_7">Ord. Prof. Dr.</string>
    <string name="p_title_8">Arş. Gör.</string>
    <string name="p_title_9">Arş. Gör. Dr.</string>
    <string name="p_title_10">Öğr. Gör.</string>
    <string name="p_title_11">Okt.</string>
    <string name="p_title_12">Uz.</string>
    <string name="p_title_13">Öğr. Ü.</string>
    <string name="main_info" translatable="false">Önemli: Profesör isimlerini her geçen gün uygulamamıza eklemeye devam ediyoruz! Okulunuzun/Bölümüzün profesörleri eklenmemişse, lütfen bize profesör öner kısmından Okulunuzun/Bölümünüzün profesörleri hakkında bilgilendirin</string>
    <string name="f_city">Şehir</string>
    <string name="f_uni">Üniversite</string>
    <string name="f_field">Fakülte</string>
    <string name="main_stats_info" translatable="false">Önemli: Arama sonuçlarında daha iyi bir sonuçla karşılaşmak için istastik sayfasına bakmanızı öneriyoruz!(Sağ üstteki simge)</string>
</resources>